--- a/index.html
+++ b/index.html
@@ -66,28 +66,7 @@
             </ul>
           </div>
           <div class="gallery">
-            <!-- 1 -->
-            <figure>
-              <img src="./images/product-img-2.jpg" alt="HANDMADE FLARED JACKET">
-              <figcaption>
-                <dl>
-                  <dt>HANDMADE FLARED JACKET</dt>
-                  <dd>
-                    <ins>189.99 USD</ins>
-                    <del>230.99 USD</del>
-                  </dd>
-                  <dd>
-                    <button type="button">ADD TO Cart</button>
-                    <button type="button"><i class="fa-regular fa-heart"></i></button>
-                  </dd>
-                  <dd>
-                    <b>-25%</b>
-                    <!-- <b>new</b>
-                    <b>hot</b> -->
-                  </dd>
-                </dl>
-              </figcaption>
-            </figure>
+           
             <!-- 1 -->
             <figure>
               <img src="./images/product-img-2.jpg" alt="HANDMADE FLARED JACKET">
@@ -367,7 +346,10 @@
         </dl>
         <!-- 3 -->
         <dl>
-          <dt>POLICIES</dt>
+          <dt>
+          <span>
+            POLICIES
+          </span></dt>
           <dd><a href="#">ENVIRONMENTAL POLICY</a></dd>
           <dd><a href="#">ANIMAL WELFARE</a></dd>
           <dd><a href="#">PRIVACY POLICY</a></dd>
@@ -385,7 +367,7 @@
           <dd><a href="#">CONTACT</a></dd>
         </dl>
       </aside>
-      footer
+      <!-- footer -->
       <footer>
         <ul>
           <li><a href="#"><img src="./images/visa.png" alt="visa"></a></li>
